--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,7 +189,7 @@ jobs:
         container:
             image: docker.io/centos:7
             volumes:
-                - /__w/solidity:/__w/solidity
+                - /__w/solidity/solidity:/__w/solidity/solidity
 
         steps:
             -   name: Setup cmake
@@ -264,11 +264,6 @@ jobs:
                 uses: jwlawson/actions-setup-cmake@v1.14
                 with:
                     cmake-version: '3.15.2'
-
-            -   name: Configure
-                run: |
-                    apt-get update
-                    apt-get install -y build-essential clang git wget
 
             -   uses: actions/checkout@v3
                 with:
