--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,7 +189,7 @@ jobs:
         container:
             image: docker.io/centos:7
             volumes:
-                - /__w/solidity/solidity:/__w/solidity/solidity
+                - /__w/solidity:/__w/solidity/
 
         steps:
             -   name: Setup cmake
@@ -205,11 +205,14 @@ jobs:
 
             -   uses: actions/checkout@v3
                 with:
+
                     fetch-depth: 5
                     
 
             -   name: Compile solc
                 run: |
+                    pwd
+                    cd .. && git log -1
                     git log
                     source /opt/rh/devtoolset-9/enable
                     mkdir build && cd build
@@ -276,6 +279,8 @@ jobs:
                     distro: ubuntu20.04
                     githubToken: ${{ github.token }}
                     run: |
+                        apt-get update -q -y
+                        apt-get install -y build-essential clang git wget cmake
                         git log -1
                         mkdir build && cd build
                         cmake -DCMAKE_BUILD_TYPE=Release -DUSE_Z3=OFF ..
